@@ -4,6 +4,7 @@ Pending changes in the mainline
 * Add missing tag "Retrieve AE Title (0008,0054)" in C-FIND SCP responses
 * Fix DICOM SCP filters if some query tag has more than 256 characters
 * "/series/.../ordered-slices" supports spaces in Image Position/Orientation Patient tags
+* New config option "Worklist.LimitAnswers" for the sample modality worklist plugin
 
 
 Version 1.7.2 (2020-07-08)
